# mdd

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
examples/: multipart_detail.rs  parser_eval.rs
src/: cli.rs  error.rs  lib.rs  main.rs
src/cache/: mod.rs  schema.rs
src/commands/: agg.rs  at.rs  cache.rs  find.rs  fm.rs  links.rs  map.rs  mod.rs  parts.rs  sec.rs  stats.rs  toc.rs
src/output/: agent.rs  human.rs  json.rs  mod.rs
src/parse/: features.rs  frontmatter.rs  links.rs  markdown.rs  mod.rs  multipart.rs
src/query/: filter.rs  heading.rs  mod.rs  predicates.rs
tests/: cli_smoke.rs  proptest_parser.rs  snapshots_json.rs
tests/fixtures/: cross-refs.md  feedback-entry.md  links-test.md  lrn-agents.md  lrn-multipart.md  lrn-two-entries.md  memory-index.md  multipart-lrn.md  no-frontmatter.md  service-doc.md  simple.md  vault-feedback.md  vault-links.md  vault-lrn.md  vault-service.md
tests/snapshots/: snapshots_json__snap_find_json.snap  snapshots_json__snap_links_json.snap  snapshots_json__snap_parts_json.snap  snapshots_json__snap_sec_json.snap  snapshots_json__snap_stats.snap  snapshots_json__snap_toc_agent.snap  snapshots_json__snap_toc_json.snap
