[package]
name = "mdd"
version = "0.1.0"
edition = "2021"
authors = ["Cosmin Rentea <cosminrentea@gmail.com>"]
description = "Markdown-Driven Development -- structural queries for coding agents"
license = "MIT"
repository = "https://github.com/cosminrentea/mdd"
keywords = ["markdown", "cli", "agent", "obsidian", "documentation"]
categories = ["command-line-utilities", "text-processing"]

[dependencies]
# CLI framework (derive macros for zero-boilerplate argument parsing)
clap = { version = "4", features = ["derive"] }

# Markdown parsing (pulldown-cmark: fastest, byte offsets, multi-part support)
pulldown-cmark = { version = "0.13", features = ["serde"] }

# YAML frontmatter
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"

# Directory walking (.gitignore-aware, parallel)
ignore = "0.4"

# Persistent file cache (ACID, pure Rust key-value store)
redb = "2"

# Binary serialization for cache values
postcard = { version = "1", features = ["alloc"] }

# Date parsing and comparison
chrono = { version = "0.4", features = ["serde"] }

# Pattern matching
regex = "1"

# Error reporting with source context
miette = { version = "7", features = ["fancy"] }
thiserror = "2"

# TTY detection for output format auto-selection
is-terminal = "0.4"

# Terminal coloring
owo-colors = "4"

[dev-dependencies]
# Snapshot testing
insta = { version = "1", features = ["yaml"] }

# Integration test helpers
assert_cmd = "2"
predicates = "3"

# Temporary directories for tests
tempfile = "3"

# Parser evaluation examples only (not used in production code)
comrak = "0.36"
markdown = "1.0"
