[package]
name = "mdd"
version = "0.2.0"
readme = "README.md"
edition = "2021"
authors = ["Cosmin Rentea <cosminrentea@gmail.com>"]
description = "Markdown-Driven Development -- structural queries for coding agents"
license = "MIT"
repository = "https://github.com/cosminrentea/mdd"
keywords = ["markdown", "cli", "agent", "documentation"]
categories = ["command-line-utilities", "text-processing"]

[lib]
name = "mdd"
path = "src/lib.rs"

[[bin]]
name = "mdd"
path = "src/main.rs"

[dependencies]
# CLI framework (derive macros for zero-boilerplate argument parsing)
clap = { version = "4", features = ["derive"] }

# Markdown parsing (pulldown-cmark: fastest, byte offsets, multi-part support)
pulldown-cmark = { version = "0.13", features = ["serde"] }

# YAML frontmatter
serde_yaml = "0.9"
serde_json = "1"

# Directory walking (.gitignore-aware, parallel)
ignore = "0.4"

# Date parsing and comparison
chrono = { version = "0.4", features = ["serde"] }

# Pattern matching
regex = "1"

# Error reporting with source context
miette = { version = "7", features = ["fancy"] }
thiserror = "2"


# Terminal coloring
owo-colors = "4"

[dev-dependencies]
# Snapshot testing
insta = { version = "1", features = ["yaml"] }

# Integration test helpers
assert_cmd = "2"
predicates = "3"

# Temporary directories for tests
tempfile = "3"

# Property-based / fuzz testing
proptest = "1"
